<resources>
    <string name="app_name">WeTok</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="logo">Logo</string>
    <string name="etEmail">Please enter email</string>
    <string name="etPassword">Please enter password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnGuestMode">Guest login</string>
    <string name="newUser">New user register</string>
    <string name="etRePassword">Re-enter password</string>
    <string name="btnVerifyEmail">Verify email</string>
    <string name="btnBack">Back</string>
    <string name="btnLogout">Log out</string>
    <string name="userName">*User Name:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="btnLoginAftReg">Start your Journey</string>
    <string name="btnNext">Next</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="location">Location:</string>
    <string name="locationHint">Please enter a city name</string>
    <string name="registerNextProm"> (Fields without * are optional) </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_my">Profile</string>
    <string name="title_friend">Focus</string>
    <string name="search">Search</string>
    <string name="action_add">Post</string>
    <string name="action_search">Search</string>
    <string name="title_city">City</string>


</resources>