<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/newUser"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_emailReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_passwordReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_rePassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/etRePassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_verifyEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/btnVerifyEmail" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/btnNext" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/btnBack" />

</LinearLayout>