<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wetok.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_city"
        android:name="com.example.wetok.view.fragment.CityFragment"
        android:label="@string/title_city"
        tools:layout="@layout/fragment_city" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.wetok.view.fragment.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />

    <fragment
        android:id="@+id/navigation_friend"
        android:name="com.example.wetok.view.fragment.FriendFragment"
        android:label="@string/title_friend"
        tools:layout="@layout/fragment_friend"/>


</navigation>