<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterNextActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/userName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/age"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/age"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/gender"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/btnG_gender"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/btn_genderFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textAlignment="viewStart" />

                <RadioButton
                    android:id="@+id/btn_genderMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/btn_genderNotApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Not applicable" />
            </RadioGroup>

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/phoneNumber"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_loginAftReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/btnLoginAftReg" />

</LinearLayout>